# evalynx

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_projects_and_runs.py  0002_add_run_result_fields.py  0003_add_run_attempts.py
app/: __init__.py  main.py  runtime.py
app/api/: __init__.py  dependencies.py  router.py
app/api/routes/: health.py  projects.py  runs.py
app/core/: config.py
app/db/: __init__.py  models.py  session.py
app/repositories/: __init__.py  projects.py  runs.py
app/runners/: __init__.py  base.py  solo_wargame.py  stub.py
app/schemas/: __init__.py  projects.py  runs.py
app/services/: __init__.py  errors.py  projects.py  runs.py
app/workers/: __init__.py  entrypoint.py  jobs.py  queue.py  run_worker.py
docs/: architecture.md  project_narrative.md
tests/: __init__.py  conftest.py  support.py  test_app.py
tests/api/: test_health.py  test_projects.py  test_runs.py
tests/integration/: test_migrations.py  test_run_lifecycle.py
tests/runners/: test_solo_wargame.py
tests/services/: test_run_service.py
tests/workers/: test_entrypoint.py  test_queue.py
